tela de lista de exercicio

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="title_activity_receita">Receita</string>
     <string name="title_activity_detalhe_exercicio">DetalheExercicio</string>
     <string name="title_activity_plano">Plano</string>
+    <string name="title_activity_lista_exercicio">ListaExercicio</string>
 </resources>
