tela de chat, lista de contato personal e aluno

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,6 @@
     <string name="title_activity_plano">Plano</string>
     <string name="title_activity_lista_exercicio">ListaExercicio</string>
     <string name="title_activity_inicio">Inicio</string>
+    <string name="title_activity_lista_chat_usuario">ListaChatUsuario</string>
+    <string name="title_activity_lista_chat_personal">ListaChatPersonal</string>
 </resources>
