--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,4 +21,5 @@
     <string name="title_activity_lista_chat_personal">ListaChatPersonal</string>
     <string name="title_activity_chat_usuario">ChatUsuario</string>
     <string name="title_activity_chat_personal">ChatPersonal</string>
+    <string name="title_activity_home_personal">HomePersonal</string>
 </resources>
