alteração de checklist cadastro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,4 +45,6 @@
     <string name="info_tecnica">Informações Técnicas</string>
     <string name="info_end">Informações de Endereço</string>
 
+    <string name="plano">Plano Vitalis</string>
+
 </resources>
