--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -45,6 +45,30 @@
     <string name="info_tecnica">Informações Técnicas</string>
     <string name="info_end">Informações de Endereço</string>
 
+    <string name="sub_cadast">Antes de você acessar nosso sistema, você deve informar algumas informações sobre você e sua saúde.</string>
+    <string name="quase">Estamos quase lá !</string>
+    <string name="dor_core">Algum médico já disse que você possui algum problema de coração e que só deveria realizar atividade física supervisionado por profissionais de saúde?</string>
+    <string name="dor_peito">Você sente dores no peito quando pratica atividade física?</string>
+    <string name="tontura">Você apresenta desequilíbrio devido à tontura e/ou perda de consciência?</string>
+    <string name="osseo">Você possui algum problema ósseo ou articular que poderia ser piorado pela atividade física?</string>
+    <string name="pressao">Você toma atualmente algum medicamento para pressão arterial e/ou problema de coração?</string>
+
+    <string name="satisfeito">Estou satisfeito</string>
+    <string name="gratuito">Plano atual - Gratuito</string>
+    <string name="beneficios">Benefícios Atuais</string>
+    <string name="objetivo">Plano de exercícios de acordo com seu objetivo;</string>
+    <string name="mural_avanco">Mural - Espaço para você registrar seu avanço corporal;</string>
+    <string name="rotina">Acesso a sua rotina (guia de alimentação, e seus exercícios do dia);</string>
+    <string name="alimentacao">Opções de Alimentação</string>
+    <string name="personais">Personais e Academias perto de você</string>
     <string name="plano">Plano Vitalis</string>
+    <string name="e_mais">Além dos benefícios atuais que você já possui, você terá acesso à:</string>
+    <string name="chat">Chat com Personal Trainer de sua escolha;</string>
+    <string name="acompanhamento">Acompanhamento personalisado com o personal para chegar mais perto de seu ojetivo!</string>
+    <string name="por">Por:</string>
+    <string name="valor">R$ 49,99</string>
+    <string name="mes">por mês</string>
+    <string name="adquirir">Adquirir Plano</string>
+    <string name="cancelamento">O plano pode ser cancelado a qualquer momento em nossa plataforma</string>
 
 </resources>
