Feat: Implementando elementos na tela de planos

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,7 +73,7 @@
     <string name="rotina">Acesso a sua rotina (guia de alimentação, e seus exercícios do dia);</string>
     <string name="alimentacao">Opções de Alimentação</string>
     <string name="personais">Personais e Academias perto de você</string>
-    <string name="plano">Plano Vitalis</string>
+    <string name="plano">Planos Vitalis</string>
     <string name="e_mais">Além dos benefícios atuais que você já possui, você terá acesso à:</string>
     <string name="chat">Chat com Personal Trainer de sua escolha;</string>
     <string name="acompanhamento">Acompanhamento personalisado com o personal para chegar mais perto de seu ojetivo!</string>
