Feat: Tela de Refeição feita

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,7 +16,7 @@
     <string name="title_activity_detalhe_exercicio">DetalheExercicio</string>
     <string name="title_activity_plano">Plano</string>
     <string name="title_activity_lista_exercicio">ListaExercicio</string>
-    <string name="title_activity_inicio">Inicio</string>
+    <string name="title_activity_home">Home</string>
     <string name="title_activity_lista_chat_usuario">ListaChatUsuario</string>
     <string name="title_activity_lista_chat_personal">ListaChatPersonal</string>
     <string name="title_activity_chat_usuario">ChatUsuario</string>
